adds virtual collection option

--- a/apps/cicognara-static/_config.yml
+++ b/apps/cicognara-static/_config.yml
@@ -16,6 +16,7 @@ plugins:
   - jekyll-feed
 header_pages:
   - about.md
+  - virtual_collection.md
   - partners.md
   - research.md
   - contributor.md
