--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports: [80:80]
     volumes: [./default.conf:/etc/nginx/conf.d/default.conf]
     environment:
-      - SERVER_NAME=${SERVER_NAME:-daviesproject-staging.lib.princeton.edu}  # Default value if no env variable is set
+      - SERVER_NAME=${SERVER_NAME:-cicognara-staging.lib.princeton.edu}  # Default value if no env variable is set
 
